--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter:
     sdk: flutter
+  google_fonts: ^2.1.0
   http: ^0.13.3
   provider: ^6.0.0
   youtube_player_flutter: ^8.0.0
