--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,9 +22,12 @@ environment:
 
 dependencies:
   cupertino_icons: ^1.0.2
+  firebase_core: ^1.7.0
+  firebase_crashlytics: ^2.2.3
   flutter:
     sdk: flutter
   flutter_html: ^2.1.4
+  flutter_launcher_icons: ^0.9.2
   google_fonts: ^2.1.0
   http: ^0.13.3
   provider: ^6.0.0
@@ -33,6 +36,11 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/logo_bwa.png"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
