--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.1.1+2
+version: 1.1.4+5
 
 environment:
   sdk: '>=2.12.0 <3.0.0'
@@ -27,6 +27,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_html: ^2.1.4
+  flutter_inappwebview: ^5.3.2
   flutter_launcher_icons: ^0.9.2
   google_fonts: ^2.1.0
   http: ^0.13.3
